Fix cover image to scale properly on small devices

--- a/client/app/projects/project/project.scss
+++ b/client/app/projects/project/project.scss
@@ -1,8 +1,14 @@
 .cover-image {
-    width: 100%;
-    height: 300px;
+    height: auto;
     overflow: hidden;
     img {
         width: 100%;
+    }
+}
+
+@media (min-width: $screen-md-min) {
+    .cover-image {
+        width: 100%;
+        height: 300px;
     }
 }
